# Slint.jl

./: .gitignore  LICENSE  Project.toml  README.md  SingleButton.slint  build_tarballs.jl  helloworld.slint
.github/workflows/: main.yml
contrib/: Project.toml  generator.jl  generator.toml
examples/: SingleButton.slint
examples/7guis/: booker.jl  cells.jl  cells.slint  circledraw.jl  circledraw.slint  counter.jl  crud.jl  crud.slint  tempconv.jl  tempconv.slint  timer.jl
examples/gallery/: gallery.slint  main.jl
examples/plotter/: main.jl  plotter.slint
rust/: Cargo.toml
rust/src/: circledraw_2dim_array.slint  my_cells.rs  my_cells_listbox.rs  my_cells_listview.rs
rust/src/7guis/: circledraw.rs  circledraw_2dim_array.rs  crud.rs  my_cells.rs  my_cells_listview.rs
rust/src/plotter/: main.rs
src/: Slint.jl  api.jl  api.jl.old
test/: runtests.jl
