[package]
name = "rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
slint-interpreter = { version = "1.3.2", features = ["display-diagnostics"] }
spin_on = "0.1.1"
once_cell = "1.19.0"
log = "0.4.20"
env_logger = "0.11.1"
plotters = "0.3.7"

[[bin]]
path = "src/gallery/main.rs"
name = "gallery"

[[bin]]
path = "src/plotter/main.rs"
name = "plotter"

[[bin]]
path = "src/7guis/my_cells.rs"
name = "my_cells"

[[bin]]
path = "src/7guis/my_cells_listview.rs"
name = "my_cells_listview"

[[bin]]
path = "src/7guis/circledraw.rs"
name = "circledraw"

[[bin]]
path = "src/7guis/circledraw_2dim_array.rs"
name = "circledraw_2dim_array"

[[bin]]
path = "src/7guis/crud.rs"
name = "crud"
